# dbcdiff

./: .gitignore  DESIGN.md  README.md  dbcdiff.bat  dbcdiff.spec  nuitka-crash-report.xml  pyproject.toml  test_report.html
.github/workflows/: ci.yml  publish.yml
canoe-plugin/: README.md  dbcdiff.capl  dbcdiff_canoe.py
dbcdiff/: __init__.py  __main__.py  baseline.py  cli.py  converter.py  engine.py  gui.py  protocol.py
dbcdiff/reporters/: __init__.py  csv_reporter.py  excel_reporter.py  html_reporter.py  json_reporter.py
scripts/: ci_dbc_diff.py
tests/: sample_new.dbc  sample_old.dbc  test_engine.py
vscode-extension/: .vscodeignore  README.md  package.json  tsconfig.json
vscode-extension/src/: extension.ts
